fixed issues in ruby with follow/unfollw

--- a/views/timeline.erb
+++ b/views/timeline.erb
@@ -1,5 +1,5 @@
 <% if @user %>
-  <% if request.path_info == '/:username' %>
+  <% if @profile_user %>
     <div class="followstatus">
       <% if @user['user_id'] == @profile_user['user_id'] %>
         This is you!
